# thunder

./: .gitignore  TESTING.md  pyproject.toml
tests/: test_collate_edge_cases.py  test_data_iterator.py  test_dataloader.py  test_dataset.py  test_flax.ipynb  test_huggingface.py  test_module.py  test_prefetcher.py  test_sampler.py
thunder/: __init__.py  data_iterator.py  dataloader.py  dataset.py  module.py  prefetcher.py  sampler.py  trainer.py  types.py
thunder/data/: __init__.py  data_iterator.py  dataloader.py  dataset.py
thunder/utils/: __init__.py  autoinitmeta.py
