[tool.poetry]
name = "thunder"
version = "0.1.0"
description = ""
authors = ["Rasmus Pallisgaard <rasm796h@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.30"
jaxlib = "^0.4.30"
flax = "^0.8.5"
optax = "^0.2.2"
numpy = "^2.0.0"
clu = "^0.0.12"
orbax = "^0.1.9"


[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
