[project]
name = "thunder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clu>=0.0.12",
    "flax>=0.10.1",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "numpy>=2.1.3",
    "optax>=0.2.3",
    "orbax>=0.1.9",
    "pytest-randomly>=3.16.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "notebook>=7.2.2",
    "ipython>=8.30.0",
]
