[project]
name = "thunder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clu>=0.0.12",
    "flax>=0.10.1",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "numpy>=2.0",
    "optax>=0.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "notebook>=7.2.2",
    "ipython>=8.30.0",
    "pyrefly>=0.35.0",
    "ruff>=0.13.3",
    "datasets>=3.0.0",
]
